--- a/src/components/addTodoForm/AddTodoForm.module.css
+++ b/src/components/addTodoForm/AddTodoForm.module.css
@@ -1,17 +1,24 @@
-.form {
+.newTodo {
   position: relative;
 }
 
 .inputNewTodo {
-  font-size: 18px;
-  font-weight: 300;
-  height: 48px;
-  padding: 4px 8px 4px 28px;
   width: 100%;
-  background-color: white;
-  color: black;
+  border: none;
+  font-size: 24px;
+  font-weight: 300;
+  height: 65px;
+  padding: 16px 16px 16px 60px;
+  background: rgba(0, 0, 0, 0.003);
+  box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
 }
 
 .inputNewTodo::placeholder {
   font-style: italic;
+  color: var(--color-grey);
+}
+
+.inputNewTodo:focus {
+  box-shadow: 0 0 2px 2px var(--color-pale-red);
+  outline: 0;
 }
