--- a/src/components/itemEditMode/ItemEditMode.module.css
+++ b/src/components/itemEditMode/ItemEditMode.module.css
@@ -11,5 +11,6 @@
   padding: 14px 20px 14px 60px;
   text-align: left;
   font-weight: 200;
-  box-shadow: 0 0 3px 3px #ce4646;
+  box-shadow: 0 0 2px 2px var(--color-pale-red);
+  outline: 0;
 }
