--- a/src/components/todoFooter/TodoFooter.module.css
+++ b/src/components/todoFooter/TodoFooter.module.css
@@ -1,12 +1,35 @@
 .todoFooter {
-  padding: 6px 8px;
+  font-size: 15px;
+  padding: 10px 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-top: 1px solid #e6e6e6;
+}
+
+.todoFooter::before {
+  bottom: 0;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2),
+    0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2);
+  content: "";
+  height: 50px;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  right: 0;
+}
+
+.todoFooter::after {
+  content: "Double-click to edit a todo";
+  position: absolute;
+  top: calc(100% + 20px);
+  font-size: 12px;
+  left: 0;
+  right: 0;
 }
 
 .item {
-  font-size: 14px;
+  z-index: 1;
 }
 
 .item:first-child {
