--- a/src/components/todoList/TodoList.module.css
+++ b/src/components/todoList/TodoList.module.css
@@ -1,47 +1,65 @@
+.ul {
+  list-style-type: none;
+}
+
 .item {
-  font-size: 22px;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 1.2em;
   border-bottom: 1px solid #ededed;
   position: relative;
 }
 
-.itemView {
-  width: 100%;
-  height: 100%;
-  padding: 14px 20px 14px 60px;
-  display: flex;
-  align-items: center;
+.itemCheckbox {
+  appearance: none;
+  -webkit-appearance: none;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  left: 4px;
+  width: 40px;
 }
 
-.item__checkbox {
-  width: 18px;
-  height: 18px;
-  position: absolute;
-  left: 4px;
+.itemCheckbox:focus {
+  box-shadow: none;
+}
+
+.itemCheckbox:focus + .todoName {
+  box-shadow: 0 0 2px 2px var(--color-pale-red);
+  outline: 0;
+}
+
+.todoName {
+  display: block;
+  padding: 15px 15px 15px 60px;
+  text-align: left;
+  background-image: url(/src/assets/icons/unchecked-icon.svg);
+  background-repeat: no-repeat;
+  background-position: top 50% left 0;
 }
 
 .done {
   text-decoration: line-through;
+  color: var(--color-grey);
 }
 
-.todoName {
-  text-align: left;
-}
-
-ul {
-  list-style-type: none;
+.done .todoName {
+  background-image: url(/src/assets/icons/checked-icon.svg);
 }
 
 .removeButton {
-  padding: 4px;
   position: absolute;
   right: 6px;
-  height: 28px;
-  width: 28px;
-  opacity: 0.8;
+  height: 40px;
+  width: 40px;
   top: 0;
   bottom: 0;
   margin: auto 0;
+  right: 10px;
   display: none;
+  justify-content: center;
+  align-items: center;
 }
 
 .item:hover .removeButton {
@@ -49,15 +67,17 @@ ul {
 }
 
 .removeIcon {
-  width: 100%;
-  height: 100%;
-  fill: white;
+  width: 18px;
+  height: 18px;
+  fill: var(--color-grey);
+  transition: fill 0.2s ease-out;
 }
 
-.removeIcon:hover {
-  fill: lightcoral;
+.removeButton:hover .removeIcon,
+.removeButton:focus .removeIcon {
+  fill: #c18585;
 }
 
-.visualyHidden {
+.hidden {
   display: none;
 }
