--- a/src/index.css
+++ b/src/index.css
@@ -5,24 +5,24 @@
 }
 
 :root {
+  --main-background: #f5f5f5;
+  --main-color: #111111;
+  --color-grey: #949494;
+  --color-pale-red: #cf7d7d;
 }
 
 body {
-  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 14px "Open Sans", sans-serif;
   line-height: 1.4em;
-  background: #f5f5f5;
-  color: #111111;
+  font-weight: 300;
+  background: var(--main-background);
+  color: var(--main-color);
   min-width: 230px;
   max-width: 550px;
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-weight: 300;
-
-  display: flex;
-  /* place-items: center; */
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -31,7 +31,6 @@ h1 {
 }
 
 button {
-  all: unset;
   background: none;
   color: inherit;
   border: none;
