--- a/src/components/completeAllButton/CompleteAllButton.module.css
+++ b/src/components/completeAllButton/CompleteAllButton.module.css
@@ -10,14 +10,14 @@
 .icon {
   width: 100%;
   height: 100%;
-  fill: #d5ffff92;
+  fill: #9c9c9c;
   padding-left: 4px;
 }
 
 .icon:hover {
-  fill: rgba(255, 255, 114, 0.721);
+  fill: rgb(37, 37, 37);
 }
 
 .button .iconOnAllDone {
-  fill: #5dff5d;
+  fill: #00ac00;
 }
