--- a/src/components/todoList/TodoList.module.css
+++ b/src/components/todoList/TodoList.module.css
@@ -3,9 +3,9 @@
 }
 
 .item {
-  font-size: 24px;
+  font-size: 1.5em;
   font-weight: 400;
-  line-height: 1.2em;
+  line-height: 1.75rem;
   border-bottom: 1px solid #ededed;
   position: relative;
 }
