--- a/src/index.css
+++ b/src/index.css
@@ -11,23 +11,25 @@
   --color-pale-red: #cf7d7d;
 }
 
+html {
+  font-size: 16px;
+}
+
 body {
-  font: 14px "Open Sans", sans-serif;
-  line-height: 1.4em;
+  font-family: "Open Sans", sans-serif;
   font-weight: 300;
   background: var(--main-background);
   color: var(--main-color);
-  min-width: 230px;
-  max-width: 550px;
   margin: 0 auto;
+
+  /* Using these properties can improve the readability and appearance 
+  of text on different browsers and operating systems. */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-weight: 300;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 3.25em;
 }
 
 button {
