Styles for new design
* Created new branch to add styles

* Added styles for todo-app

* Added styles to support mobile version

* On page load focus on input is now working with autoFocus

* Merge broke the app. These are fixes for app to work

* Minor CSS tweaks

--- a/src/components/todoFilters/TodoFilters.module.css
+++ b/src/components/todoFilters/TodoFilters.module.css
@@ -1,11 +1,8 @@
-.filtersContent {
-  display: flex;
-}
-
 .filter {
   margin-right: 8px;
   padding: 2px 4px;
   border: 1px solid transparent;
+  border-radius: 4px;
 }
 
 .filter:last-child {
@@ -13,7 +10,7 @@
 }
 
 .filter:hover {
-  border: 1px solid #ce4646d2;
+  border: 1px solid #ce4646;
   border-radius: 4px;
 }
 
