--- a/src/components/itemEditMode/ItemEditMode.module.css
+++ b/src/components/itemEditMode/ItemEditMode.module.css
@@ -1,6 +1,4 @@
 .itemEdit {
-  width: 100%;
-  height: 100%;
   display: flex;
 }
 
@@ -11,5 +9,5 @@
   padding: 14px 20px 14px 60px;
   text-align: left;
   font-weight: 200;
-  box-shadow: 0 0 3px 3px #ce4646;
+  box-shadow: 0 0 2px 2px var(--color-pale-red);
 }
