--- a/src/index.css
+++ b/src/index.css
@@ -5,33 +5,34 @@
 }
 
 :root {
+  --main-background: #f5f5f5;
+  --main-color: #111111;
+  --color-grey: #949494;
+  --color-pale-red: #cf7d7d;
+}
+
+html {
+  font-size: 16px;
 }
 
 body {
-  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
-  line-height: 1.4em;
-  background: #f5f5f5;
-  color: #111111;
-  min-width: 230px;
-  max-width: 550px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  background: var(--main-background);
+  color: var(--main-color);
   margin: 0 auto;
+
+  /* Using these properties can improve the readability and appearance 
+  of text on different browsers and operating systems. */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-weight: 300;
-
-  display: flex;
-  /* place-items: center; */
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 3.25em;
 }
 
 button {
-  all: unset;
   background: none;
   color: inherit;
   border: none;
